--- a/views/pages/child_parent_view.ejs
+++ b/views/pages/child_parent_view.ejs
@@ -168,6 +168,12 @@
             </div>
             <div class="row">
               <div class="input-field col s12">
+                <input id="image_url" type="text" name="image_url" class="validate" value="<%= child.image_url %>" pattern=".*\.(png|gif|jpg|jpeg|svg|tiff|PNG|GIF|JPG|JPEG|SVG|TIFF)">
+                <label for="image_url">Link to Profile Photo</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
                 <input id="username" type="text" name="username" class="validate" value="<%=child.username%>">
                 <label for="username">Username</label>
               </div>
