--- a/views/pages/child_parent_view.ejs
+++ b/views/pages/child_parent_view.ejs
@@ -10,7 +10,7 @@
   let childId = <%- child.id %>;
 </script>
 
-<div class="center-align" style="border: solid 3px; border-radius: 4%; background-color: ghostwhite; margin-top: 8%; border-color: ghostwhite; opacity: 0.8;">
+<div class="center-align content-box">
   <h1 style="margin-top: 1%;" class="chorelist"><%= child.first_name %></h1>
 
   <table class="bordered">
