--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -6,7 +6,7 @@
 
 <script type="text/javascript" src="/js/register.js" defer></script>
 
-<div class="container">
+<div class="content-box">
   <div class="row">
     <form class="col s12" action="/register" method="POST">
       <div class="center-align">
