--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,32 +5,34 @@
 <% } %>
 <script type="text/javascript" src="/js/index.js" defer></script>
 
+<div class="content-box">
 
-<div class="center-align log">
-  <h1 class="chorelist">Log In</h1>
+  <div class="center-align log">
+    <h1 class="chorelist">Log In</h1>
+  </div>
+
+  <div class="row">
+
+    <form class="col s12 m6 offset-m3" action="/login" method="post">
+      <div class="row">
+        <div class="input-field col s12">
+          <input autofocus id="username" name="username" type="text" class="validate">
+          <label for="username">Username</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="password" type="password" name="password" class="validate">
+          <label for="password">Password</label>
+        </div>
+      </div>
+      <div class="row">
+        <button class="btn" type="submit">Log In<i class="material-icons right">send</i></button>
+      </div>
+    </form>
+  </div>
+  <hr>
+  <div class="center-align">
+    <a href="/register" class="waves-effect waves-light btn"><i class="material-icons left">group</i>Register</a>
+  </div>
 </div>
-
-<div class="row">
-
-   <form class="col s12 m6 offset-m3" action="/login" method="post">
-     <div class="row">
-       <div class="input-field col s12">
-         <input autofocus id="username" name="username" type="text" class="validate">
-         <label for="username">Username</label>
-       </div>
-     </div>
-     <div class="row">
-       <div class="input-field col s12">
-         <input id="password" type="password" name="password" class="validate">
-         <label for="password">Password</label>
-       </div>
-     </div>
-     <div class="row">
-       <button class="btn" type="submit">Log In<i class="material-icons right">send</i></button>
-     </div>
-   </form>
- </div>
-<hr>
- <div class="center-align">
-   <a href="/register" class="waves-effect waves-light btn"><i class="material-icons left">group</i>Register</a>
- </div>
