--- a/views/pages/child.ejs
+++ b/views/pages/child.ejs
@@ -6,7 +6,7 @@
 
 <script type="text/javascript" src="/js/child.js" defer></script>
 
-<div class= "container" style="border: solid 3px; border-radius: 4%; background-color: ghostwhite; margin-top: 2%; border-color: ghostwhite;">
+<div class= "container" style="border: solid 3px; border-radius: 4%; opacity: 0.8; background-color: ghostwhite; margin-top: 2%; border-color: ghostwhite;">
   <h1 style="margin-top: 1%;"><%= child.first_name %>'s Chores </h1>
 
   <table class="bordered">
@@ -37,7 +37,7 @@
       </table>
 </div>
 
-<div class="container" style="border: solid 3px; border-radius: 4%; background-color: ghostwhite; margin-top: 2%; margin-bottom:2%; border-color: ghostwhite;">
+<div class="container" style="border: solid 3px; border-radius: 4%; opacity: 0.8; background-color: ghostwhite; margin-top: 2%; margin-bottom:2%; border-color: ghostwhite;">
   <h2 style="margin-top: 1%;">Completed Chores</h2>
   <table class="bordered">
     <thead>
