--- a/views/pages/family.ejs
+++ b/views/pages/family.ejs
@@ -31,7 +31,7 @@
 
 
         <div class="center-align">
-          <button class="btn-large waves-effect waves-light btn modal-trigger" href="#add-child-modal" type="submit" name="action">Add Children<i class="material-icons right">person_add</i></button>
+          <button class="waves-effect waves-light btn modal-trigger light-green" href="#add-child-modal" type="submit" name="action">Add Children<i class="material-icons right">person_add</i></button>
         </div>
 
         <div id="add-child-modal" class="modal">
@@ -70,7 +70,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <button type="submit" class="waves-effect waves-light btn-large" type="submit">Let's Make a Child<i class="material-icons right">add_circle</i></button>
+                  <button type="submit" class="waves-effect waves-light btn light-green" type="submit">Let's Make a Child<i class="material-icons right">add_circle</i></button>
                 </div>
               </form>
             </div>
