--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,12 +27,12 @@
         </div>
       </div>
       <div class="row">
-        <button class="btn" type="submit">Log In<i class="material-icons right">send</i></button>
+        <button class="btn light-green" type="submit">Log In<i class="material-icons right">send</i></button>
       </div>
     </form>
   </div>
   <hr>
   <div class="center-align">
-    <a href="/register" class="waves-effect waves-light btn"><i class="material-icons left">group</i>Register</a>
+    <a href="/register" class="waves-effect waves-light light-green btn"><i class="material-icons left">group</i>Register</a>
   </div>
 </div>
