--- a/public/css/master.css
+++ b/public/css/master.css
@@ -49,6 +49,9 @@ i.icon-red
 
 td > img
 {
+    width: 25px;
+    margin-right: 5px;
+
     -webkit-transform: scale(2);
             transform: scale(2);
 }
@@ -81,15 +84,41 @@ hr
 
 .btn
 {
+    opacity: 1;
     border-radius: 5px;
+}
+
+.btn-floating
+{
+    -webkit-transition: all .3s;
+            transition: all .3s;
+}
+
+.btn-floating:hover
+{
+    position: relative;
+    z-index: 100;
+
+    -webkit-transform: scale(1.3);
+            transform: scale(1.3);
 }
 
 .content-box
 {
-    margin: 0;
+    margin: 0 !important;
     padding: 20px;
 
     opacity: .8;
     border-radius: 10px;
     background-color: ghostwhite;
+}
+
+.content
+{
+    margin: 0 5%;
+}
+
+td
+{
+    /*max-width: 100px;*/
 }
