--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,7 +28,7 @@
 
     <main>
       <div class="center-align">
-        <div class="content container">
+        <div class="content">
           <%- body %>
         </div>
       </div>
